refactor: Cleaned code